--- a/front/index.html
+++ b/front/index.html
@@ -2,14 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="../dist/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Starter</title>
+    <title>minosynth</title>
   </head>
 
   <body>
-    <div id="root">
-    </div>
-    <script src="dist/index.js"></script>
+    <div id="root"></div>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
