--- a/front/index.html
+++ b/front/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
     <title>minosynth</title>
   </head>
 
   <body>
-    <div id="root"></div>
-    <script src="./dist/index.js"></script>
+    <div id='root' style=></div>
+    <script src='./dist/index.js'></script>
   </body>
 </html>
