--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <div id='root' style=></div>
+    <div id='root' style="min-width:1210px;"></div>
+    <script type='test/javascript' src='/socket.io/socket.io.js'></script>
     <script src='./dist/index.js'></script>
   </body>
 </html>
